# pricevista-server

./: .gitignore  Cargo.toml  README.md
docs/database/: DB00_Requirements_analysis.md  DB01_Conceptual_data_model.md  DB01_Conceptual_design.md  DB02_Logical_data_model.md
src/: error.rs  fetcher.rs  handler.rs  importer.rs  lib.rs  main.rs  markets.rs  models.rs  parser.rs  providers.rs  schema.rs
src/markets/: algolia.rs  billa.rs  factfinder.rs  hofer.rs  markant.rs  mpreis.rs  roksh.rs  spar.rs
src/providers/: algolia.rs  billa.rs  factfinder.rs  hofer.rs  mpreis.rs  roksh.rs  spar.rs
