[package]
name = "pricevista_server"
description = "Server for serving PriceVista applications"
version = "0.1.0"
edition = "2021"

[lib]
name = "pricevista"
path = "src/lib.rs"

[[bin]]
name = "pvmgr"
path = "src/bin/manager/main.rs"

[[bin]]
name = "pvserve"
path = "src/bin/server/main.rs"

[dependencies]
axum = "0.7.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.12", features = ["derive", "env"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
reqwest = { version = "0.11.24", features = ["json"] }
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
sibyl = { version = "0.6.16", features = ["nonblocking", "tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
